deploy/deployment-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: tutuplapak-app
  namespace: express-express
spec:
  selector:
    app: tutuplapak-app
  type: NodePort
  ports:
    - name: http
      port: 8000
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tutuplapak-app
  namespace: express-express
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tutuplapak-app
  template:
    metadata:
      labels:
        app: tutuplapak-app
    spec:
      containers:
        - name: app
          image: us-west1-docker.pkg.dev/projectsprint-000001/ps-docker-repo/team-express:11d96df
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /v1/health-check
              port: 8000
            initialDelaySeconds: 40
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /v1/health-check
              port: 8000
            initialDelaySeconds: 80
            periodSeconds: 20
            timeoutSeconds: 5
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
